<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengesActivity">

    <Button
        android:id="@+id/buttonExplore"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/border"
        android:text="@string/explore"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMyChallenge"
        app:layout_constraintEnd_toStartOf="@+id/buttonMyChallenge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMyChallenge"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:background="@drawable/border"
        android:text="@string/myChallenges"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewChallenges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textChallenges"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExplore" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewChallenge1"
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewChallenges">

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_challenge">

        </FrameLayout>

        <Button
            android:id="@+id/buttonJoin1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/join"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:text="@string/title1"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="25dp"
            android:text="@string/description1"
            android:textColor="@android:color/holo_red_light" />

        <ImageView
            android:id="@+id/imageViewArmMuscle"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="3dp"
            app:srcCompat="@drawable/armmuscle" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewChallenge2"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewChallenge1">

        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_challenge">

        </FrameLayout>

        <ImageView
            android:id="@+id/imageViewWeight"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="3dp"
            app:srcCompat="@drawable/weight" />

        <TextView
            android:id="@+id/textViewDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="25dp"
            android:text="@string/description2"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/textViewTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:text="@string/title2"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonJoin2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/join"
            android:textSize="17sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewChallenge3"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewChallenge2">

        <FrameLayout
            android:id="@+id/frame3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_challenge">

        </FrameLayout>

        <TextView
            android:id="@+id/textViewDescription3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="25dp"
            android:text="@string/description3"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/textViewTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:text="@string/title3"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewWeight2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="3dp"
            app:srcCompat="@drawable/situp" />

        <Button
            android:id="@+id/buttonJoin3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/join"
            android:textSize="17sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>